--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,10 @@
 # ----------------------- #
 
 url: http://atasco.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+# url: http://www.atas.co
+title: a t a s c o
+subtitle: m. Dificultad que retrasa la marcha de un asunto
+author: aH
 simple_search: http://google.com/search
 description:
 
@@ -13,7 +14,8 @@ description:
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
-date_format: "ordinal"
+# date_format: "ordinal"
+date_format: "%d %b %Y"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
@@ -63,13 +65,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: atasco
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: by_atasco
 twitter_tweet_button: true
 
 # Google +1
@@ -90,7 +92,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: atasco
 disqus_show_comment_count: false
 
 # Google Analytics
